# ann-automl

./: .gitignore  2017.txt  DB_init_and_requests_examples.ipynb  DESCRIPTION.md  Dataset format.txt  LICENSE  MANIFEST.in  NEW.csv  README.md  REQUIREMENTS.md  bot.py  chatbot_server.py  convert_cats_and_dogs_to_coco.py  db_module.py  dbconfig.json  dbconfig.txt  example.py  hw_devices.py  imageNetToCOCOClasses.txt  init_db.py  launch.py  launch_lm.py  long_test.py  model_databases_creating_and_other_examples.py  nn_recommend.py  nnfuncs-Copy1.py  nnfuncs-Copy2.py  nnfuncs.py  requirements.txt  setup.cfg  setup.py  solver.py  solverVB1.py  solverVB2.py
Solver/: db_module.py  solverVB3.py
Solver/Logs/: Readme.txt
Solver/architectures/: readme.txt
Solver/trainedNN/: readme
ann_automl/: __init__.py
classifier/: classify.py  tf_funcs.py
docs/: DOCUMENTATION.md  conf.py  index.rst  mymake.sh  scruct.txt
examples/: DB_init_and_requests_examples.ipynb  GUI_test.ipynb  Untitled.ipynb  db_module-Copy1.py  example.py  gui.ipynb  model_databases_creating_and_other_examples.py  nn_rules-Solver3.py  nn_rulesVB-30.10.22.py  solverVB2.py  solverVB3.py
scripts/: NN_Module.py  NN_module_solver.py
solver/: base.py
tests/: client_secrets.json  show_detections_retina.py  show_detections_yolo.py  test_autocreate.py  test_convert.py  test_db.py  test_detection_retina.py  test_detection_yolo.py  test_emulation.py  test_labeling.py  test_nn_conf.py  test_segmentation.py  test_solver.py  test_train.py  test_trained_tf.py  test_trained_torch.py
utils/: __init__.py  nn_conf.py
(+64 files in other folders)
