[metadata]
name = ann_automl
version = 0.1.0
author =
author_email =
maintainer = The ann_automl Developers
maintainer_email = matis-mpailab@intsys.msu.ru
description = Automated machine learning for artificial neural networks
long_description = file: DESCRIPTION.md
long_description_content_type = text/markdown
url = https://github.com/mpailab/pylext
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Cython
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux

[options]
python_requires = >=3.6